fixed overflow mabye

--- a/docs/main.css
+++ b/docs/main.css
@@ -1,3 +1,7 @@
+html {
+    overflow: hidden;
+    height: 100%;
+}
 body {
     padding: 0;
     margin: 0;
